==> lyusupov/SoftRF/software/firmware/source/SoftRF/src/platform/PSoC4.cpp <==
#include <SPI.h>
#include <Wire.h>
#include "../system/SoC.h"
#include "../driver/RF.h"
#include "../driver/EEPROM.h"
#include "../driver/LED.h"
#include "../driver/OLED.h"
#include "../driver/Baro.h"
#include "../protocol/data/NMEA.h"
#include "../protocol/data/GDL90.h"
#include "../protocol/data/D1090.h"
#include <innerWdt.h>
#include <lorawan_port.h>

static void PSoC4_post_init()
{
  if (hw_info.model == SOFTRF_MODEL_MINI) {
    Serial.println();
    Serial.println(F("CubeCell-GPS Power-on Self Test"));
    Serial.println();
    Serial.flush();

    Serial.println(F("Built-in components:"));

    Serial.print(F("RADIO   : "));
    Serial.println(hw_info.rf      == RF_IC_SX1262        ? F("PASS") : F("FAIL"));
    Serial.print(F("GNSS    : "));
    Serial.println(hw_info.gnss    == GNSS_MODULE_GOKE    ? F("PASS") : F("FAIL"));
    Serial.print(F("DISPLAY : "));
    Serial.println(hw_info.display == DISPLAY_OLED_HELTEC ? F("PASS") : F("FAIL"));

    Serial.println();
    Serial.println(F("External components:"));
    Serial.print(F("BMx280  : "));
    Serial.println(hw_info.baro    == BARO_MODULE_BMP280 ? F("PASS") : F("N/A"));

    Serial.println();
    Serial.println(F("Power-on Self Test is completed."));
    Serial.println();
    Serial.flush();
  }
#if defined(USE_OLED)
  OLED_info1();
#endif /* USE_OLED */
}

static void PSoC4_fini()
{
  if (hw_info.model == SOFTRF_MODEL_MINI) {

    digitalWrite(SOC_GPIO_PIN_GNSS_PWR, HIGH);
    pinMode(SOC_GPIO_PIN_GNSS_PWR, ANALOG);

    swSer.end();

    delay(2000);

    pinMode(SOC_GPIO_PIN_OLED_RST, ANALOG);

    digitalWrite(SOC_GPIO_PIN_OLED_PWR, HIGH);
    pinMode(SOC_GPIO_PIN_OLED_PWR, ANALOG);

    pinMode(SOC_GPIO_PIN_BATTERY, ANALOG);

//    settings->nmea_l = false;
//    settings->nmea_s = false;

    Serial.end();

    pinMode(SOC_GPIO_PIN_BUTTON, INPUT);
    attachInterrupt(digitalPinToInterrupt(SOC_GPIO_PIN_BUTTON), PSoC4_User_Key_Wakeup, FALLING);

    pinMode(SOC_GPIO_PIN_CONS_RX, INPUT);
    attachInterrupt(digitalPinToInterrupt(SOC_GPIO_PIN_CONS_RX), PSoC4_SerialWakeup, FALLING);
  }

  PSoC4_state = PSOC4_LOW_POWER;
//  CyHalt(0);
}

static void PSoC4_reset()
{
  CySoftwareReset();
}

static uint32_t PSoC4_getChipId()
{
#if !defined(SOFTRF_ADDRESS)
  uint32_t id = getID();

  /* remap address to avoid overlapping with congested FLARM range */
  if (((id & 0x00FFFFFF) >= 0xDD0000) && ((id & 0x00FFFFFF) <= 0xDFFFFF)) {
    id += 0x100000;
  }

  return id;
#else
  return (SOFTRF_ADDRESS & 0xFFFFFFFFU );
#endif
}

static byte PSoC4_Display_setup()
{
  byte rval = DISPLAY_NONE;

#if defined(USE_OLED)
  rval = OLED_setup();
#endif /* USE_OLED */

  return rval;
}

static void PSoC4_Display_loop()
{
#if defined(USE_OLED)
  OLED_loop();
#endif /* USE_OLED */
}

static void PSoC4_Display_fini(const char *msg)
{
#if defined(USE_OLED)
  OLED_fini(msg);
#endif /* USE_OLED */
}

static float PSoC4_Battery_voltage()
{
  uint16_t mV = 0;

  if (hw_info.model == SOFTRF_MODEL_MINI &&
      PSoC4_state   == PSOC4_ACTIVE) {
    /* GPIO7 is shared between USER_KEY and VBAT_ADC_CTL functions */
    int user_key_state = digitalRead(SOC_GPIO_PIN_BUTTON);

    /* if the key is not pressed down - activate VBAT_ADC_CTL */
    if (user_key_state == HIGH) {
      pinMode(VBAT_ADC_CTL,OUTPUT);
      digitalWrite(VBAT_ADC_CTL,LOW);
    }

    mV = analogRead(SOC_GPIO_PIN_BATTERY);

    /* restore previous state of VBAT_ADC_CTL pin */
    if (user_key_state == HIGH) {
      /*
       * CubeCell-GPS has external 10K VDD pullup resistor
       * connected to GPIO7 (USER_KEY / VBAT_ADC_CTL) pin
       */
      pinMode(VBAT_ADC_CTL, INPUT);
    }
  }

  return mV * SOC_ADC_VOLTAGE_DIV / 1000.0;
}

static void PSoC4_WDT_fini()
{
  CySysWdtDisable();
}

void handleEvent(AceButton* button, uint8_t eventType,
    uint8_t buttonState) {

  switch (eventType) {
    case AceButton::kEventClicked:
    case AceButton::kEventReleased:
#if defined(USE_OLED)
      if (button == &button_1) {
        OLED_Next_Page();
      }
#endif
      break;
    case AceButton::kEventDoubleClicked:
      break;
    case AceButton::kEventLongPressed:
      if (button == &button_1) {
        shutdown("  OFF  ");
//      Serial.println(F("This will never be printed."));
      }
      break;
  }
}

static void PSoC4_Button_setup()
{
#if SOC_GPIO_PIN_BUTTON != SOC_UNUSED_PIN
  if (hw_info.model == SOFTRF_MODEL_MINI) {
    int button_pin = SOC_GPIO_PIN_BUTTON;

    // Button(s) uses external pull up resistor.
    pinMode(button_pin, INPUT);

    button_1.init(button_pin);

    // Configure the ButtonConfig with the event handler, and enable all higher
    // level events.
    ButtonConfig* PageButtonConfig = button_1.getButtonConfig();
    PageButtonConfig->setEventHandler(handleEvent);
    PageButtonConfig->setFeature(ButtonConfig::kFeatureClick);
//    PageButtonConfig->setFeature(ButtonConfig::kFeatureDoubleClick);
    PageButtonConfig->setFeature(ButtonConfig::kFeatureLongPress);
    PageButtonConfig->setFeature(ButtonConfig::kFeatureSuppressAfterClick);
//    PageButtonConfig->setFeature(ButtonConfig::kFeatureSuppressAfterDoubleClick);
//    PageButtonConfig->setFeature(
//                      ButtonConfig::kFeatureSuppressClickBeforeDoubleClick);
//  PageButtonConfig->setDebounceDelay(15);
    PageButtonConfig->setClickDelay(600);
//    PageButtonConfig->setDoubleClickDelay(1500);
    PageButtonConfig->setLongPressDelay(2000);

//  attachInterrupt(digitalPinToInterrupt(button_pin), onPageButtonEvent, CHANGE );
  }
#endif /* SOC_GPIO_PIN_BUTTON != SOC_UNUSED_PIN */
}

static void PSoC4_Button_loop()
{
#if SOC_GPIO_PIN_BUTTON != SOC_UNUSED_PIN
  if (hw_info.model == SOFTRF_MODEL_MINI) {
    button_1.check();
  }
#endif /* SOC_GPIO_PIN_BUTTON != SOC_UNUSED_PIN */
}

static void PSoC4_Button_fini()
{
#if SOC_GPIO_PIN_BUTTON != SOC_UNUSED_PIN
  if (hw_info.model == SOFTRF_MODEL_MINI) {
//  detachInterrupt(digitalPinToInterrupt(SOC_GPIO_PIN_BUTTON));
    pinMode(SOC_GPIO_PIN_BUTTON, ANALOG);
  }
#endif /* SOC_GPIO_PIN_BUTTON != SOC_UNUSED_PIN */
}
